Bug 113976 - Fix build files so WebGLDebugXXX extensions can be used if enabled.
Summary: Fix build files so WebGLDebugXXX extensions can be used if enabled.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Gregg Tavares
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-04 16:31 PDT by Gregg Tavares
Modified: 2013-04-25 17:47 PDT (History)
3 users (show)

See Also:


Attachments
Patch (10.39 KB, patch)
2013-04-04 16:36 PDT, Gregg Tavares
no flags Details | Formatted Diff | Diff
Patch (10.39 KB, patch)
2013-04-22 14:58 PDT, Gregg Tavares
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Gregg Tavares 2013-04-04 16:31:07 PDT
Fix build files so WebGLDebugXXX extensions can be used if enabled.
Comment 1 Gregg Tavares 2013-04-04 16:36:25 PDT
Created attachment 196553 [details]
Patch
Comment 2 Kenneth Russell 2013-04-04 17:48:29 PDT
Comment on attachment 196553 [details]
Patch

This looks good to me but Dean should review it.
Comment 3 Dean Jackson 2013-04-20 14:27:18 PDT
Comment on attachment 196553 [details]
Patch

Sorry I left this for so long - I missed the email. Up to you if you want to commit it, otherwise I'll do it, or you could set cq+ (but the patch might not apply any more).
Comment 4 Gregg Tavares 2013-04-22 14:58:28 PDT
Created attachment 199112 [details]
Patch
Comment 5 WebKit Commit Bot 2013-04-25 09:30:07 PDT
Comment on attachment 199112 [details]
Patch

Rejecting attachment 199112 [details] from review queue.

gman@chromium.org does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py.

- If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags.

- If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed).  The commit-queue restarts itself every 2 hours.  After restart the commit-queue will correctly respect your reviewer rights.
Comment 6 WebKit Commit Bot 2013-04-25 11:48:48 PDT
The commit-queue encountered the following flaky tests while processing attachment 199112 [details]:

svg/batik/text/smallFonts.svg bug 115040 (author: oliver@apple.com)
transitions/color-transition-rounding.html bug 114182 (author: simon.fraser@apple.com)
transitions/cubic-bezier-overflow-svg-length.html bug 114183 (author: peter@chromium.org)
transitions/interrupt-zero-duration.html bug 114184 (authors: cmarrin@apple.com, rniwa@webkit.org, and simon.fraser@apple.com)
transitions/multiple-background-transitions.html bug 114185 (author: simon.fraser@apple.com)
transitions/cubic-bezier-overflow-color.html bug 114186 (author: peter@chromium.org)
transitions/multiple-shadow-transitions.html bug 114187 (author: simon.fraser@apple.com)
transitions/mismatched-shadow-transitions.html bug 114188 (author: simon.fraser@apple.com)
transitions/color-transition-all.html bug 114189 (authors: ossy@webkit.org and simon.fraser@apple.com)
transitions/negative-delay.html bug 114190 (author: simon.fraser@apple.com)
transitions/cubic-bezier-overflow-shadow.html bug 114191 (author: peter@chromium.org)
transitions/min-max-width-height-transitions.html bug 114192 (author: simon.fraser@apple.com)
transitions/cancel-transition.html bug 114193 (authors: ojan@chromium.org, rniwa@webkit.org, and simon.fraser@apple.com)
transitions/border-radius-transition.html bug 114194 (author: simon.fraser@apple.com)
transitions/flex-transitions.html bug 114195 (author: tony@chromium.org)
transitions/mixed-type.html bug 114196 (author: mikelawther@chromium.org)
transitions/multiple-mask-transitions.html bug 114197 (author: simon.fraser@apple.com)
transitions/color-transition-premultiplied.html bug 114198 (author: simon.fraser@apple.com)
transitions/mismatched-shadow-styles.html bug 114199 (author: simon.fraser@apple.com)
transitions/mask-transitions.html bug 114200 (authors: ojan@chromium.org, oliver@apple.com, and simon.fraser@apple.com)
transitions/cubic-bezier-overflow-length.html bug 114201 (author: peter@chromium.org)
transitions/multiple-background-size-transitions.html bug 114202 (authors: mitz@webkit.org and simon.fraser@apple.com)
transitions/clip-transition.html bug 114203 (authors: dglazkov@chromium.org and simon.fraser@apple.com)
transitions/cubic-bezier-overflow-transform.html bug 114204 (author: peter@chromium.org)
transitions/interrupted-accelerated-transition.html bug 56242 (authors: rniwa@webkit.org, simon.fraser@apple.com, and tonyg@chromium.org)
transitions/background-transitions.html bug 114206 (author: simon.fraser@apple.com)
http/tests/security/cookies/third-party-cookie-blocking-user-action.html bug 114511 (authors: ap@webkit.org, jochen@chromium.org, and rniwa@webkit.org)
http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html bug 114208 (authors: abarth@webkit.org and rniwa@webkit.org)
fast/loader/javascript-url-in-object.html bug 114210 (authors: rniwa@webkit.org and sam@webkit.org)
platform/mac/editing/deleting/deletionUI-single-instance.html bug 114181 (author: rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 7 WebKit Commit Bot 2013-04-25 11:49:40 PDT
Comment on attachment 199112 [details]
Patch

Clearing flags on attachment: 199112

Committed r149129: <http://trac.webkit.org/changeset/149129>
Comment 8 WebKit Commit Bot 2013-04-25 11:49:43 PDT
All reviewed patches have been landed.  Closing bug.
Comment 9 Dean Jackson 2013-04-25 17:47:51 PDT
Thanks Gregg and Ken.