Fix build files so WebGLDebugXXX extensions can be used if enabled. https://bugs.webkit.org/show_bug.cgi?id=113976

Reviewed by Dean Jackson.

No new tests as no new functionality.

* DerivedSources.make:
* GNUmakefile.list.am:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSWebGLRenderingContextCustom.cpp:


Canonical link: https://commits.webkit.org/133626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149129 268f45cc-cd09-0410-ab3c-d52691b4dbfc